--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -30,3 +30,18 @@
   transform: rotateY(90deg);
   transition-delay: 0s;
 }
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-width : 320px)
+and (max-width : 480px) {
+/* Styles */
+.card img {
+  width: 80px;
+  display: block;
+  border: 2px solid yellow;
+  border-radius: 6px;
+  height:100px;
+}
+
+}
