--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   margin: 0;
   font-size: 1.5em;
   text-align: center;
-  background: #1b1523;
+  background-image:url("../public/img/game_background.jpg");
   color: #fff;
 }
